Git Tests/force-app/main/default/default/objects/ItemContrato__c/ItemContrato__c.object-meta.xml
<CustomObject>
    <label>Item de contrato</label>
    <nameField>
        <displayFormat>IT-{00000000}</displayFormat>
        <label>Número do item de contrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens de contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>