Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>CASESAFEID(NumeroContrato__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID do cliente</label>
    <type>Text</type>
</CustomField>