Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <formula>CASE(NomeProduto__r.CategoriaComercial__c, &apos;G&apos;, &apos;GENÉRICO&apos;, &apos;M&apos;, &apos;MATERIAIS&apos;,&apos;N&apos;, &apos;NUTRIÇÃO&apos;, &apos;E&apos;, &apos;OPME&apos;, &apos;R&apos;, &apos;REFERÊNCIA&apos;, &apos;A&apos;, &apos;AMBOS&apos;, &apos;C&apos;, &apos;DIABETES&apos;, &apos;Q&apos;,
					&apos;ODONTOLOGIA&apos;, &apos;S&apos;, &apos;Especialidade&apos;, &apos;Y&apos;, &apos;EQUIPAMENTO&apos;, &apos;&apos;)</formula>
    <label>BU</label>
    <type>Text</type>
</CustomField>