Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/CodigoItemContrato__c.field-meta.xml
<CustomField>
    <fullName>CodigoItemContrato__c</fullName>
    <externalId>true</externalId>
    <label>Código do item do contrato</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>