Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor__c</fullName>
    <formula>NomeProduto__r.Fornecedor__r.Name</formula>
    <label>Fornecedor</label>
    <type>Text</type>
</CustomField>