Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/FornecedorContrato__c.field-meta.xml
<CustomField>
    <fullName>FornecedorContrato__c</fullName>
    <formula>NumeroContrato__r.Fornecedor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fornecedor do contrato</label>
    <type>Text</type>
</CustomField>