Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/NumeroContrato__c.field-meta.xml
<CustomField>
    <fullName>NumeroContrato__c</fullName>
    <label>Número do contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Itens de contrato (Número do contrato)</relationshipLabel>
    <relationshipName>ItensContrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>