Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/PercentualDescontoBoleto__c.field-meta.xml
<CustomField>
    <fullName>PercentualDescontoBoleto__c</fullName>
    <label>% desconto no boleto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>