Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/PrincipioAtivoProduto__c.field-meta.xml
<CustomField>
    <fullName>PrincipioAtivoProduto__c</fullName>
    <formula>NomeProduto__r.Description</formula>
    <label>Princípio ativo do produto</label>
    <type>Text</type>
</CustomField>