Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Em Aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Expirado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
            <value>
                <fullName>Aguardando integração</fullName>
            </value>
            <value>
                <fullName>Ativo</fullName>
                <isActive>false</isActive>
                <label>Ativo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>