Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/StatusContrato__c.field-meta.xml
<CustomField>
    <fullName>StatusContrato__c</fullName>
    <formula>TEXT(NumeroContrato__r.Status)</formula>
    <label>Fornecedor</label>
    <type>Text</type>
</CustomField>