Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/ValidadeLote__c.field-meta.xml
<CustomField>
    <fullName>ValidadeLote__c</fullName>
    <label>Validade do lote</label>
    <type>Date</type>
</CustomField>