Git Tests/force-app/main/default/default/objects/ItemContrato__c/fields/VigenciaInicial__c.field-meta.xml
<CustomField>
    <fullName>VigenciaInicial__c</fullName>
    <label>Vigência inicial</label>
    <type>Date</type>
</CustomField>