Git Tests/force-app/main/default/default/objects/ItemContrato__c/validationRules/FornecedorDiferente.validationRule-meta.xml
<ValidationRule>
    <fullName>FornecedorDiferente</fullName>
    <active>false</active>
    <description>O fornecedor do contrato deve ser o mesmo fornecedor do produto</description>
    <errorConditionFormula>Fornecedor__c &lt;&gt;  FornecedorContrato__c</errorConditionFormula>
    <errorDisplayField>NomeProduto__c</errorDisplayField>
    <errorMessage>O fornecedor do contrato deve ser o mesmo fornecedor do produto</errorMessage>
</ValidationRule>