Git Tests/force-app/main/default/default/objects/ItemContrato__c/validationRules/ItemContrato_BloquearEdicaoPrecoFixo.validationRule-meta.xml
<ValidationRule>
    <fullName>ItemContrato_BloquearEdicaoPrecoFixo</fullName>
    <active>true</active>
    <description>Regra de validação para bloquear a edição de qualquer item de contrato de preço fixo dentro do Salesforce por usuários comerciais.</description>
    <errorConditionFormula>AND(
ISPICKVAL(NumeroContrato__r.TipoRegra__c, &apos;Preço Fixo&apos;), 
NOT(ISBLANK(CreatedDate)),
$Profile.Name != &apos;Administrador do sistema&apos;
)</errorConditionFormula>
    <errorMessage>Não é permitido editar o item de um contrato de preço fixo.</errorMessage>
</ValidationRule>