Git Tests/force-app/main/default/default/objects/ItemContrato__c/validationRules/ValidaEdicaoDescontoContratoOL.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaEdicaoDescontoContratoOL</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISCHANGED(PercentualDescontoBoleto__c),
				NOT(ISPICKVAL(NumeroContrato__r.TipoRegra__c, &apos;O&apos;)),
				$Profile.Name != &apos;Administrador do sistema&apos;
)</errorConditionFormula>
    <errorDisplayField>PercentualDescontoBoleto__c</errorDisplayField>
    <errorMessage>Apenas contratos do tipo OL permitem edição nesse campo</errorMessage>
</ValidationRule>